Name: mrmr
Version: 0.0.1
Description: minimum Redundancy Maximum Relevance feature selection in Haskell
License: GPL-3
License-file: LICENSE
Author: Lance Hepler
Maintainer: nlhepler@gmail.com
Build-Type: Simple
Cabal-Version: >=1.8

Executable mrmr
  Main-is: Mrmr.hs
  Build-Depends: base >= 3.0 && < 5, bytestring >= 0.9, containers >= 0.4, vector >= 0.9
